--- a/src/assets/components/styles/Message.css
+++ b/src/assets/components/styles/Message.css
@@ -16,11 +16,11 @@
 }
 
 .containerInfo__phrase {
-    color: purple;
-    text-shadow: 1px 2px 2px blue;
+    color: rgb(243, 230, 243);
+    text-shadow: 2px 30px 30px blue;
     width: 100%;
-    background-image: url("/espacio/rectangle.png.webp");
-    padding-right: 110px;
+    background-image: url("/imagenes/rectangle.png");
+    padding-right: 100px;
     padding-left: 25px;
     margin-top: 10px;
   
@@ -36,8 +36,8 @@
 }
 
 .containerInfo__author {
-    background-color: rgb(255, 255, 255, 0.618);
-    color: gray;
+    background-color: rgba(14, 11, 11, 0.618);
+    color: rgb(196, 13, 13);
     font-weight: lighter;
     text-align: center;
     padding: 10px 20px;
